# ZINA

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  server.py  zina.py
prompts/: prompt_detect.md  prompt_edit.md
tests/: test_eval.py
trainers/: eval.py
