[project]
name = "zina"
version = "0.1.0"
description = "Zina inference API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bert-score>=0.3.13",
    "capevalkit>=0.1.0",
    "clip",
    "fastapi>=0.116.1",
    "markupsafe==2.1.3",
    "numpy<2",
    "python-multipart>=0.0.20",
    "qwen-vl-utils>=0.0.11",
    "torch>=2.5",
    "torchvision>=0.19.0",
    "transformers==4.49.0",
    "uvicorn>=0.35.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu118"]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"

[tool.uv.sources]
torch = { index = "pytorch-cu118" }
torchvision = { index = "pytorch-cu118" }
clip = { git = "https://github.com/openai/CLIP.git" }
